--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "useless-blobs",
-  "version": "1.0.0",
-  "description": "Creates blob SVGs to use in your designs",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "1.1.2",
+  "description": "Parametrized random SVG blob creation",
+  "files": ["lib/**/*"],
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepare" : "npm run build",
+    "prepublish": "npm run build",
+    "demo:build": "cd ./demo && npm run build"
   },
   "keywords": [
     "React"
