--- a/demo/package.json
+++ b/demo/package.json
@@ -9,8 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "useless-blobs": "1.1.1"
+    "react-syntax-highlighter": "^15.5.0",
+    "useless-blobs": "1.1.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
