--- a/package.json
+++ b/package.json
@@ -1,18 +1,39 @@
 {
   "name": "useless-blobs",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Parametrized random SVG blob creation",
-  "files": ["lib/**/*"],
+  "files": [
+    "lib/**/*"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "demo:build": "cd ./demo && npm run build",
+    "format": "prettier --write \"src/**/*.ts\" \"./index.ts\" \"components/**/*\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"./index.ts\" \"components/**/*\"",
+    "lint": "eslint . --ext .ts --ext .tsx",
+    "postversion" : "git push && git push --tags",
     "prepare" : "npm run build",
-    "prepublish": "npm run build",
-    "demo:build": "cd ./demo && npm run build"
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "test": "jest",
+    "version" : "npm run format && git add ."
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jbukuts/useless-blobs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jbukuts/useless-blobs/issues"
+  },
+  "homepage": "https://github.com/jbukuts/useless-blobs#readme",
   "keywords": [
-    "React"
+    "random",
+    "blob",
+    "svg",
+    "shapes",
+    "react"
   ],
   "author": {
     "name": "Jake Bukuts",
@@ -20,13 +41,27 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=15.0.1",
-    "react-dom": ">=15.0.1"
+    "react": ">=16",
+    "react-dom": ">=16"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
-    "react": ">=15.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.33.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "prettier": "^2.8.3",
+    "react": "^18.2.0",
     "react-dom": ">=15.0.1",
+    "ts-jest": "^29.0.5",
     "typescript": "4.9.4"
   }
 }
