--- a/.github/workflows/deploy_demo.yml
+++ b/.github/workflows/deploy_demo.yml
@@ -1,5 +1,8 @@
 name: Deploy Demo
 on:
+  push:
+    paths:
+      - demo/**
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
