--- a/demo/package.json
+++ b/demo/package.json
@@ -2,6 +2,7 @@
   "name": "useless-blobs-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jbukuts.github.io/useless-blobs/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
