--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "useless-blobs",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Parametrized random SVG blob creation",
   "files": [
     "lib/**/*"
@@ -27,7 +27,7 @@
   "bugs": {
     "url": "https://github.com/jbukuts/useless-blobs/issues"
   },
-  "homepage": "https://github.com/jbukuts/useless-blobs#readme",
+  "homepage": "https://jbukuts.github.io/useless-blobs/",
   "keywords": [
     "random",
     "blob",
